--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-4">
-    <h1 class="display-1"><small class="text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
+    <h1 class="display-1">Steven Miller<br><small class="text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square" viewBox="0 0 16 16">
   <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
   <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z"/>
-</svg> Developer</small><br>Steven Miller</h1>
+</svg> Developer</small></h1>
   </div>
     <div class="col-8">
       <!--Project nav-->
@@ -82,7 +82,7 @@
 </div>
      </main>
 <footer>
-<nav id="navtest3" class="navbar shadow-lg p-3 mb-5 bg-body-tertiary rounded border">
+<nav id="navtest3" class="navbar shadow-lg p-3 mb-5 mt-5 bg-body-tertiary rounded border">
   <div class="container-fluid">
     <a class="navbar-brand" href="#offcanvasSkills" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSkills" aria-controls="offcanvasSkills"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
   <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2z"/>
