--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   </div>
 </nav>
       <!--card-->
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+<div class="card">
+  <img src="4DAD1A7C-F9EF-43F6-AB52-2006B34A7F29.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">JS Docs Project</h5>
     <p class="card-text">A minified and personalized version of JavaScript Documentation.</p>
