--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
 </nav>
       <!--card-->
-<div class="card">
+<div class="card shadow-lg">
   <img src="4DAD1A7C-F9EF-43F6-AB52-2006B34A7F29.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">JS Docs Project</h5>
