--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
   <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
   <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z"/>
 </svg> Developer</small></h1>
+      <div id="filler" class="container shadow-lg border mt-5" 
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+</svg> </div>
   </div>
+    
     <div class="col-8">
       <!--Project nav-->
         <nav id="navtest4" class="navbar navbar-expand-lg shadow-lg p-3 mb-5 bg-body-tertiary rounded border ">
@@ -73,7 +78,7 @@
   </div>
 </nav>
       <!--card-->
-<div class="card shadow-lg">
+<div class="card shadow-lg border">
   <img src="4DAD1A7C-F9EF-43F6-AB52-2006B34A7F29.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">JS Docs Project</h5>
